# cj-store

./: .env.example  .gitignore  ARCHITECTURE.md  CHAT.md  COMMANDS.md  Cargo.toml  DATA_SCHEMA.md  DEVELOPMENT.md  LICENSE.md  MISSION.md  PLAN.md  README.md  RECOVERY.md  REVIEW_TODO.md  TODO.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/improve/: SKILL.md
.claude/skills/rate/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: bot.rs  chest.rs  cli.rs  config.rs  constants.rs  error.rs  fsutil.rs  logging.rs  main.rs  messages.rs  mojang.rs  node.rs  order.rs  storage.rs  store.rs  trade.rs  types.rs
src/bot/: chest_io.rs  connection.rs  inventory.rs  mod.rs  navigation.rs  shulker.rs  trade.rs
src/chat/: classifier.rs  client.rs  composer.rs  conversation.rs  decisions.rs  history.rs  jsonl.rs  memory.rs  mod.rs  online_players.rs  pacing.rs  persona.rs  pricing.rs  reasoning_filter.rs  reflection.rs  retention.rs  state.rs  tools.rs  web.rs
src/chat/store_view/: fsread.rs  mod.rs  pair.rs  tests.rs  trade.rs  user.rs
src/store/: command.rs  journal.rs  mod.rs  orders.rs  pricing.rs  queue.rs  rate_limit.rs  rollback.rs  state.rs  trade_state.rs  utils.rs
src/store/handlers/: buy.rs  cli.rs  deposit.rs  info.rs  mod.rs  operator.rs  player.rs  sell.rs  validation.rs  withdraw.rs
src/types/: chest.rs  item_id.rs  node.rs  order.rs  pair.rs  position.rs  storage.rs  trade.rs  user.rs
