[package]
name = "cj-store"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
azalea = { git = "https://github.com/azalea-rs/azalea" }
chrono = "0.4.44"
dialoguer = "0.12.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
notify = "8.2.0"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"

[dev-dependencies]
proptest = "1.11.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
